[package]
name = "kiro-rs-cache-simulator"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/AI-Trash/kiro-rs-cache-simulator"
description = "Pure in-memory prompt-cache simulator proxy for kiro-rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
http = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "http2", "system-proxy", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
